- added status and configuration to Run entity - better exception handling
